docs/api/qiskit/0.19/qiskit.finance.data_providers.BaseDataProvider.mdx
---
title: BaseDataProvider (v0.19)
description: API reference for qiskit.finance.data_providers.BaseDataProvider in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.finance.data_providers.BaseDataProvider
---

# BaseDataProvider

<Class id="qiskit.finance.data_providers.BaseDataProvider" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/finance/data_providers/_base_data_provider.py" signature="BaseDataProvider" modifiers="class">
  The abstract base class for data\_provider modules within Qiskit’s finance module.

  To create add-on data\_provider module subclass the BaseDataProvider class in this module. Doing so requires that the required driver interface is implemented.

  To use the subclasses, please see [https://github.com/Qiskit/qiskit-tutorials/blob/stable/0.25.x/tutorials/finance/11\_time\_series.ipynb](https://github.com/Qiskit/qiskit-tutorials/blob/stable/0.25.x/tutorials/finance/11_time_series.ipynb)

  ## Methods

  <span id="basedataprovider-get-coordinates" />

  ### get\_coordinates

  <Function id="qiskit.finance.data_providers.BaseDataProvider.get_coordinates" signature="BaseDataProvider.get_coordinates()">
    Returns random coordinates for visualisation purposes.
  </Function>

  <span id="basedataprovider-get-covariance-matrix" />

  ### get\_covariance\_matrix

  <Function id="qiskit.finance.data_providers.BaseDataProvider.get_covariance_matrix" signature="BaseDataProvider.get_covariance_matrix()">
    Returns the covariance matrix.

    **Returns**

    an asset-to-asset covariance matrix.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="basedataprovider-get-mean-vector" />

  ### get\_mean\_vector

  <Function id="qiskit.finance.data_providers.BaseDataProvider.get_mean_vector" signature="BaseDataProvider.get_mean_vector()">
    Returns a vector containing the mean value of each asset.

    **Returns**

    a per-asset mean vector.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="basedataprovider-get-period-return-covariance-matrix" />

  ### get\_period\_return\_covariance\_matrix

  <Function id="qiskit.finance.data_providers.BaseDataProvider.get_period_return_covariance_matrix" signature="BaseDataProvider.get_period_return_covariance_matrix()">
    Returns a vector containing the mean value of each asset.

    **Returns**

    a per-asset mean vector.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="basedataprovider-get-period-return-mean-vector" />

  ### get\_period\_return\_mean\_vector

  <Function id="qiskit.finance.data_providers.BaseDataProvider.get_period_return_mean_vector" signature="BaseDataProvider.get_period_return_mean_vector()">
    Returns a vector containing the mean value of each asset.

    **Returns**

    a per-asset mean vector.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="basedataprovider-get-similarity-matrix" />

  ### get\_similarity\_matrix

  <Function id="qiskit.finance.data_providers.BaseDataProvider.get_similarity_matrix" signature="BaseDataProvider.get_similarity_matrix()">
    Returns time-series similarity matrix computed using dynamic time warping.

    **Returns**

    an asset-to-asset similarity matrix.

    **Return type**

    numpy.ndarray

    **Raises**

    [**QiskitFinanceError**](qiskit.finance.QiskitFinanceError "qiskit.finance.QiskitFinanceError") – no data loaded
  </Function>

  <span id="basedataprovider-run" />

  ### run

  <Function id="qiskit.finance.data_providers.BaseDataProvider.run" signature="BaseDataProvider.run()" modifiers="abstract">
    Loads data.
  </Function>
</Class>

